## test sub-directory of the SimLFS project
include $(top_srcdir)/Makefile.common

MAINTAINERCLEANFILES = Makefile.in

##
# TODO: uncomment when the migration to Boost.UTF is completed
#SUBDIRS = airinv avlcal simfqt simlfs
SUBDIRS = simfqt simlfs

EXTRA_DIST =

##
check_PROGRAMS =
TESTS = $(check_PROGRAMS)
XFAIL_TESTS = #
